<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sieve</string>
    <string name="choose_title">Where should Sieve run?</string>
    <string name="mode_local">On this phone</string>
    <string name="mode_local_desc">Everything stays on the phone and works without another computer.</string>
    <string name="mode_remote">On my server</string>
    <string name="mode_remote_desc">Use the Sieve you already run at home, with its history and settings.</string>
    <string name="choose_hint">You can change this later from the ⋮ menu.</string>
    <string name="server_title">Your Sieve server</string>
    <string name="server_message">Its address as you would type it in a browser.</string>
    <string name="server_address">Server address</string>
    <string name="server_example">http://192.168.1.20:8377</string>
    <string name="connect">Connect</string>
    <string name="unreachable_title">Can’t reach Sieve</string>
    <string name="starting">Starting Sieve… The first start takes up to a minute.</string>
    <string name="connecting">Connecting to %1$s…</string>
    <string name="unreachable">Could not reach Sieve at %1$s.</string>
    <string name="retry">Try again</string>
    <string name="change">Change</string>
    <string name="reload">Reload</string>
    <string name="switch_mode">Switch server</string>
    <string name="downloading">Downloading %1$s</string>
    <string name="service_channel">Sieve running</string>
    <string name="service_running">Keeping your videos up to date</string>
    <string name="stop">Stop</string>
</resources>
